--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 </head>
 <body>
 <p>You should do an lti tool launch at /lti_tool</p>
-<p>For none authentication is required. So that, any consumer and secret key can be added.</p>
+<p>None authentication is required. So that, any consumer and secret key can be added.</p>
 <!--
 <p>For now you can just use the following consumer and secret keys:</p>
  <ul>
